fix title display on tablet and above

--- a/app/components/Menu/_Menu.scss
+++ b/app/components/Menu/_Menu.scss
@@ -225,14 +225,13 @@ nav {
 }
 
 @media (min-width: 768px) {
-.menuIconWrapper {
-  left: 0;
-  position: relative;
-}
-.wrapper {
-  border-right: 1px solid $lightActivePrimaryBg;
-}
-
+  .menuIconWrapper {
+    left: 0;
+    position: relative;
+  }
+  .wrapper {
+    border-right: 1px solid $lightActivePrimaryBg;
+  }
   .body {
     width: 5rem;
     height: 100vh;
@@ -242,6 +241,9 @@ nav {
         left: 4.95rem;
         opacity: 1;
       }
+    }
+    .title {
+      display: block;
     }
   }
   .panel {
